# enka_artifact_parser

./: .gitignore  CHANGELOG.md  Cargo.toml  TODO.md  build.rs
src/: characters.json  loc.json  main.rs  types.rs
src/types/: good.rs
