[package]
name = "enka_artifact_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["skrit <skrityx@gmail.com>"]
description = "Continuously parses ENKA site to GOOD format for any UID."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4"
minreq = { version = "2.6", features = ["https", "json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
